--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,9 +8,13 @@ website:
     background: "#43A047"
     border: true
     left:
-      - about.qmd
-      
-      
+    - recetas.qmd
+    right: 
+    - icon: facebook
+      href: https://www.facebook.com/Brassicas20
+    - icon: instagram
+      href: https://www.instagram.com/brassicas_/
+    
 format:
   html:
     theme: sandstone
